Update README and refactor budget handling in the API
- Enhanced README with detailed setup instructions.
- Updated budget values in envelopes.json for accuracy.
- Ensured budget values are consistently treated as numbers in main.js.
- Added project metadata in package.json and package-lock.json.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "personal-budget-api",
+  "version": "1.0.0",
+  "description": "Personal Budget Web Application",
+  "main": "main.js",
+  "scripts": {
+    "start": "node main.js"
+  },
   "dependencies": {
     "express": "^4.21.2"
   }
